better practice with fetchCatByBreed function select start option added

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <div class="container">
-      <select class="breed-select"></select>
+      <select class="breed-select">
+        <option value="" selected="selected" disabled="disabled">
+          Please select a cat
+        </option>
+      </select>
       <span class="loader"></span>
       <div class="cat-info"></div>
     </div>
